--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <div class="pro-dat text-center">
             <h5>Agency Website</h5>
             <p>PSD to HTML & CSS</p>
-            <a href="#" target="_blank" class="btn btn-sm">View</a>
+            <a href="https://niamurndc.github.io/agency_website/" target="_blank" class="btn btn-sm">View</a>
           </div>
         </div>
         <div class="col-md-4 my-2 pro-box">
@@ -115,7 +115,7 @@
           <div class="pro-dat text-center">
             <h5>Company Website</h5>
             <p>PSD to HTML & CSS</p>
-            <a href="#" target="_blank" class="btn btn-sm">View</a>
+            <a href="https://niamurndc.github.io/company_website/" target="_blank" class="btn btn-sm">View</a>
           </div>
         </div>
         <div class="col-md-4 my-2 pro-box">
@@ -123,7 +123,7 @@
           <div class="pro-dat text-center">
             <h5>Gym Website</h5>
             <p>PSD to HTML & CSS</p>
-            <a href="#" target="_blank" class="btn btn-sm">View</a>
+            <a href="https://niamurndc.github.io/gym_website/" target="_blank" class="btn btn-sm">View</a>
           </div>
         </div>
         <div class="col-md-4 my-2 pro-box">
@@ -131,7 +131,7 @@
           <div class="pro-dat text-center">
             <h5>Restaurant Website</h5>
             <p>PSD to HTML & CSS</p>
-            <a href="#" target="_blank" class="btn btn-sm">View</a>
+            <a href="https://niamurndc.github.io/restaurant_website/" target="_blank" class="btn btn-sm">View</a>
           </div>
         </div>
         <div class="col-md-4 my-2 pro-box">
@@ -139,7 +139,7 @@
           <div class="pro-dat text-center">
             <h5>Event Website</h5>
             <p>HTML, CSS, & Bootstrap</p>
-            <a href="#" target="_blank" class="btn btn-sm">View</a>
+            <a href="https://niamurndc.github.io/event_site/" target="_blank" class="btn btn-sm">View</a>
           </div>
         </div>
         <div class="col-md-4 my-2 pro-box">
